<resources>
    <string name="app_name">Restaurant</string>
    <string name="item_image_desc">Image for the items in the menu</string>
    <string name="sign_in_menu">Sign in</string>
    <string name="settings_menu">Settings</string>
    <string name="login_image_desc">title image for the login activity logo</string>
    <string name="email_hint">email</string>
    <string name="password_hint">password</string>
    <string name="login_btn_text">Login</string>
    <string name="cancel_btn_text">Cancel</string>
    <string name="title_text">Frok And Knife</string>
    <string name="valid_pass_hint">Please Insert Valid Password</string>
    <string name="valid_email_hint">Please Insert Valid Gmail Account</string>
    <string name="stay_login_summary">this will let you signed in always and no need to log in every time</string>
    <string name="settings_label">Settings</string>
    <string name="grid_key">grid_key</string>
    <string name="night_key">night_theme_key</string>
    <string name="export_menu_item">Export Menu</string>
    <string name="other_settings_menu_item">Other Settings</string>
    <string name="import_menu_item">Import Menu</string>
    <string name="subtitle_menu_item">Menu Items</string>
</resources>
